--- a/Informe VI - Lab. Circuitos.tex
+++ b/Informe VI - Lab. Circuitos.tex
@@ -167,7 +167,7 @@ Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\
 \end{figure}
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.75\linewidth]{4.jpg}
+    \includegraphics[width=0.75\linewidth]{4.JPG}
     \caption{Captura de la señal en rampa de \SI{1.5}{\kilo\hertz}.}
     \label{fig:frecuencia-rampa-1k5hz}
 \end{figure}
@@ -175,9 +175,9 @@ Con la ayuda del generador se configuraron las señales enlistadas en la Tabla~\
 Se armó el circuito RC serie indicado en la guía práctica sobre un protoboard, conectando en serie la resistencia de \SI{1}{\kilo\ohm} con el condensador proporcionado en el laboratorio. El generador de funciones se acopló al nodo de entrada del circuito y se condujo el retorno a tierra común, mientras que las puntas del osciloscopio quedaron listas para registrar la señal aplicada y la respuesta del condensador. Como se aprecia en la Figura~\ref{fig:montaje-rc}, el montaje mantiene una conexión compacta entre la resistencia, el condensador y las terminales de medición. Además, se replicó el circuito en un entorno SPICE con una fuente cuadrada de \SI{5}{\volt} a \SI{1}{\kilo\hertz}, conservando los valores de la resistencia y el condensador para contrastar la evolución temporal del voltaje almacenado. Las Figuras~\ref{fig:simulacion-rc-esquematico} y~\ref{fig:simulacion-rc-respuesta} recogen el diagrama esquemático utilizado y la respuesta numérica de carga y descarga del condensador.
 \begin{figure}[htbp]
     \centering
-    \framebox[0.75\linewidth]{\rule{0pt}{3.5cm}}
+\includegraphics[width=0.75\linewidth]{montaje 4.jpg}
     \caption{Montaje físico del circuito RC para el estudio de carga y descarga.}
-    \label{fig:montaje-rc}
+    \label{fig:montaje 4}
 \end{figure}
 \begin{figure}[htbp]
     \centering
